[project]
name = "sciqis"
version = "0.1.0"
description = "Base environment for SCIQIS tutorials"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "ipympl>=0.9.7",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.5",
    "jupyterlab-git>=0.51.2",
    "line-profiler>=5.0.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "scipy>=1.16.1",
]
